--- a/src/components/cumbre2026/CumbreLayout.astro
+++ b/src/components/cumbre2026/CumbreLayout.astro
@@ -15,7 +15,7 @@ const { title, description } = Astro.props;
     </div>
 
     <!-- Content -->
-    <div class="relative z-10">
+    <div class="relative z-10 pt-20">
       <slot />
     </div>
 
@@ -27,8 +27,8 @@ const { title, description } = Astro.props;
       class="fixed bottom-6 right-6 z-50 flex items-center justify-center w-14 h-14 bg-[#25D366] rounded-full shadow-lg hover:scale-110 transition-transform duration-300 group"
       aria-label="Contactar por WhatsApp"
     >
-      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="currentColor" class="text-white">
-        <path d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.36 3.45 16.86L2.05 22L7.3 20.62C8.75 21.41 10.38 21.83 12.04 21.83C17.5 21.83 21.95 17.38 21.95 11.92C21.95 9.27 20.92 6.78 19.05 4.91C17.18 3.03 14.69 2 12.04 2ZM12.05 20.21C10.43 20.21 8.94 19.78 7.66 19.01L7.36 18.83L4.17 19.67L5.02 16.55L4.82 16.23C3.96 14.86 3.51 13.28 3.51 11.66C3.51 7.15 7.34 3.48 12.05 3.48C14.35 3.48 16.51 4.38 18.14 6C19.76 7.62 20.65 9.77 20.65 12.07C20.65 16.58 16.82 20.21 12.05 20.21ZM16.31 16.48C16.12 16.38 15.02 15.82 14.82 15.74C14.62 15.66 14.47 15.62 14.32 15.85C14.17 16.08 13.75 16.57 13.62 16.73C13.49 16.88 13.36 16.9 13.17 16.8C12.97 16.7 12.35 16.5 11.61 15.84C11.03 15.32 10.63 14.68 10.45 14.36C10.26 14.05 10.42 13.88 10.51 13.78C10.6 13.69 10.71 13.55 10.82 13.42C10.94 13.29 10.98 13.19 11.05 13.06C11.13 12.92 11.09 12.8 11.03 12.68C10.98 12.55 10.53 11.45 10.35 11C10.17 10.56 9.99 10.62 9.87 10.62C9.75 10.62 9.62 10.62 9.48 10.62C9.35 10.62 9.13 10.67 8.95 10.87C8.76 11.07 8.24 11.56 8.24 12.55C8.24 13.54 8.95 14.5 9.06 14.65C9.17 14.8 10.47 16.8 12.46 17.66C13.99 18.32 14.59 18.24 15.54 18.1C16.26 17.99 17.37 17.41 17.6 16.77C17.83 16.13 17.83 15.58 17.76 15.47C17.69 15.36 17.51 15.29 16.31 14.88V16.48Z"></path>
+      <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-white">
+        <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path>
       </svg>
       <!-- Tooltip -->
       <span class="absolute right-full mr-3 px-3 py-1 bg-white text-gray-800 text-xs font-bold rounded-lg opacity-0 group-hover:opacity-100 transition-opacity whitespace-nowrap">
